// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrator:getMigrationsToRun works (from<to ; from is base) 1`] = `
Array [
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "do",
    "version": "02",
  },
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "do",
    "version": "03",
  },
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "do",
    "version": "04",
  },
]
`;

exports[`migrator:getMigrationsToRun works (from<to ; not exists in middle) 1`] = `
Array [
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "do",
    "version": "03",
  },
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "do",
    "version": "04",
  },
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "do",
    "version": "05",
  },
]
`;

exports[`migrator:getMigrationsToRun works (from<to) 1`] = `
Array [
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "do",
    "version": "03",
  },
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "do",
    "version": "04",
  },
]
`;

exports[`migrator:getMigrationsToRun works (from=to) 1`] = `Array []`;

exports[`migrator:getMigrationsToRun works (from>to ; from is base) 1`] = `Array []`;

exports[`migrator:getMigrationsToRun works (from>to ; not exists in middle) 1`] = `
Array [
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "undo",
    "version": "07",
  },
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "undo",
    "version": "06",
  },
]
`;

exports[`migrator:getMigrationsToRun works (from>to ; to is base) 1`] = `
Array [
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "undo",
    "version": "04",
  },
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "undo",
    "version": "03",
  },
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "undo",
    "version": "02",
  },
]
`;

exports[`migrator:getMigrationsToRun works (from>to) 1`] = `
Array [
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "undo",
    "version": "04",
  },
  Object {
    "body": "",
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "title": "",
    "type": "undo",
    "version": "03",
  },
]
`;
